initial project setup

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "marwen-brini/laramar",
+    "description": "my first laravel package",
     "keywords": [
-        ":vendor_name",
+        "Marwen-Brini",
         "laravel",
-        ":package_slug"
+        "laramar"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/marwen-brini/laramar",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Marwen-Brini",
+            "email": "brini.marwen@gmail.com",
             "role": "Developer"
         }
     ],
@@ -34,13 +34,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "laraMar\\Laramar\\": "src",
+            "laraMar\\Laramar\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "laraMar\\Laramar\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -54,10 +54,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "laraMar\\Laramar\\LaramarServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "Laramar": "laraMar\\Laramar\\Facades\\Laramar"
             }
         }
     },
