--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -21,8 +21,24 @@ jobs:
             testbench: 7.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
-
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_USER: user
+          MYSQL_PASSWORD: secret
+          MYSQL_DATABASE: laramar
+          MYSQL_ROOT_PASSWORD: secretroot
+        ports:
+          - 3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     steps:
+      - name: Verify MYSQL connection
+        run:  |
+          mysql --version
+          sudo apt-get install mysql-client
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports['3306']}} -uuser -psecret -e "SHOW DATABASES"
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -45,3 +61,7 @@ jobs:
 
       - name: Execute tests
         run: vendor/bin/pest
+        env:
+          DB_USER: user
+          DB_PASSWORD: secret
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}
