--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,4 +36,12 @@
     <logging>
         <junit outputFile="build/report.junit.xml"/>
     </logging>
+    <php>
+        <env name="DB_CONNECTION" value="mysql" />
+        <env name="DB_USERNAME" value="marwen" />
+        <env name="DB_PASSWORD" value="Marwanism123" />
+        <env name="DB_DATABASE" value="laramar" />
+        <env name="DB_HOST" value="127.0.0.1" />
+        <env name="DB_PORT" value="3306" />
+    </php>
 </phpunit>
